FracCalcStarterProject/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject
-d
C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\FracCalc.java
<---- end of javadoc command ---->
Loading source file C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\FracCalc.java...
C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\FracCalc.java:37: error: not a statement
        answer;
        ^
C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\FracCalc.java:119: error: <identifier> expected
    public static int lcdNum ( int 
                                  ^
C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\FracCalc.java:121: error: reached end of file while parsing
}
 ^
C:\Users\bhs_science\Documents\GitHub\MillsAPCS-november\FracCalcStarterProject\FracCalc.java:122: error: reached end of file while parsing
4 errors
